--- a/trunk/sample/hsqldb.service
+++ b/trunk/sample/hsqldb.service
@@ -24,7 +24,7 @@ ExecReload=/local/hsqldb-2.3.4/sample/hsqldb.init restart
 ExecStop=/local/hsqldb-2.3.4/sample/hsqldb.init stop
 KillMode=process
 #Restart=always  Don't silently restart and mask real problems
-PIDFile=/var/run/hsqldb.pid
+PIDFile=/run/hsqldb.pid
 #User=...  We manage user from file /etc/hsqldb.conf
 #WorkingDirectory=...  No dependency on $PWD
 Type=forking
