--- a/trunk/test-src/org/hsqldb/resources/sqlstate-condition.properties
+++ b/trunk/test-src/org/hsqldb/resources/sqlstate-condition.properties
@@ -9,7 +9,7 @@
 2B=dependent privilege descriptors still exist
 0Z=diagnostics exception
 07=dynamic SQL error
-38=external routine exception;
+38=external routine exception
 39=external routine invocation exception
 0A=feature not supported;
 23=integrity constraint violation
@@ -55,6 +55,12 @@ HZ=remote database access
 45=Unhandled User-Defined Exception
 #FCD2-09-MED-2006-01, 26.1 SQLSTATE, Table 37
 HY=CLI-specific condition
+#https://docs.microsoft.com/en-us/sql/odbc/reference/develop-app/sqlstate-mappings
+#https://docs.microsoft.com/en-us/sql/odbc/reference/appendixes/appendix-a-odbc-error-codes
+# ODBC 3
+# HY=CLI-specific condition
+# ODBC 2
+S1=CLI-specific condition
 22.MED=MED data exception
 HW=datalink exception
 HV=FDW-specific condition
