--- a/trunk/test-src/org/hsqldb/resources/test-dbmd-convert.properties
+++ b/trunk/test-src/org/hsqldb/resources/test-dbmd-convert.properties
@@ -90,6 +90,7 @@ hsqldb.test.suite.dbmd.supports.convert.to.boolean.from.smallint=true
 hsqldb.test.suite.dbmd.supports.convert.to.boolean.from.tinyint=true
 hsqldb.test.suite.dbmd.supports.convert.to.boolean.from.varchar=true
 # to char
+hsqldb.test.suite.dbmd.supports.convert.to.char.from.array=true
 hsqldb.test.suite.dbmd.supports.convert.to.char.from.bigint=true
 hsqldb.test.suite.dbmd.supports.convert.to.char.from.binary=true
 hsqldb.test.suite.dbmd.supports.convert.to.char.from.bit=true
@@ -130,6 +131,7 @@ hsqldb.test.suite.dbmd.supports.convert.to.char.from.interval_hour_to_minute=tru
 hsqldb.test.suite.dbmd.supports.convert.to.char.from.interval_hour_to_second=true
 hsqldb.test.suite.dbmd.supports.convert.to.char.from.interval_minute_to_second=true
 # to clob
+hsqldb.test.suite.dbmd.supports.convert.to.clob.from.array=true
 hsqldb.test.suite.dbmd.supports.convert.to.clob.from.bigint=true
 hsqldb.test.suite.dbmd.supports.convert.to.clob.from.binary=true
 hsqldb.test.suite.dbmd.supports.convert.to.clob.from.bit=true
@@ -299,6 +301,7 @@ hsqldb.test.suite.dbmd.supports.convert.to.integer.from.interval_hour_to_minute=
 hsqldb.test.suite.dbmd.supports.convert.to.integer.from.interval_hour_to_second=true
 hsqldb.test.suite.dbmd.supports.convert.to.integer.from.interval_minute_to_second=true
 # to longvarchar
+hsqldb.test.suite.dbmd.supports.convert.to.longvarchar.from.array=true
 hsqldb.test.suite.dbmd.supports.convert.to.longvarchar.from.bigint=true
 hsqldb.test.suite.dbmd.supports.convert.to.longvarchar.from.binary=true
 hsqldb.test.suite.dbmd.supports.convert.to.longvarchar.from.bit=true
@@ -568,6 +571,7 @@ hsqldb.test.suite.dbmd.supports.convert.to.varbinary.from.null=true
 hsqldb.test.suite.dbmd.supports.convert.to.varbinary.from.varbinary=true
 hsqldb.test.suite.dbmd.supports.convert.to.varbinary.from.varchar=true
 # to varchar
+hsqldb.test.suite.dbmd.supports.convert.to.varchar.from.array=true
 hsqldb.test.suite.dbmd.supports.convert.to.varchar.from.bigint=true
 # CHECK ME - done
 hsqldb.test.suite.dbmd.supports.convert.to.varchar.from.binary=true
